--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -1,7 +1,7 @@
 <single-spa-router>
   <div class="grid">
     <header class="header">
-      <application name="@zhuroff/melodymap-react-navbar"></application>
+      <!-- <application name="@zhuroff/melodymap-react-navbar"></application> -->
     </header>
     <main class="main">
       <route default>
@@ -21,7 +21,7 @@
       </route>
     </main>
     <footer class="footer">
-      <application name="@zhuroff/melodymap-react-player"></application>
+      <!-- <application name="@zhuroff/melodymap-react-player"></application> -->
     </footer>
   </div>
 </single-spa-router>
